cards and bootstrap

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -1,11 +1,11 @@
 .test{
-    background-color: grey;
+    background-color: #e9e9e9;
     text-align: center;
     z-index: -1;
     overflow: hidden;
 }
 .first{
-    margin-top: 40px;
+    margin-top: 56px;
 }
 .hide{
     display: none;
