--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,7 +1,6 @@
 .logoMenu{
     width: 150px;
 }
-.navbar{
-    height: 30px !important;
-    background-color: white !important;
+.active {
+    color: red;
 }
