--- a/src/app/components/displayArticle/displaySet/displaySet.css
+++ b/src/app/components/displayArticle/displaySet/displaySet.css
@@ -1,7 +1,5 @@
 .setFrame {
-    margin: 0;
-    position: relative;
-    top: 50%;
-    transform:translateY(-50%);
-    margin: 0% 2%;
+    padding: 2%;
+    height: 100% !important;
+    width: 100% !important;
 }
