--- a/src/app/components/fullscreenScroller/fullscreenScroller.css
+++ b/src/app/components/fullscreenScroller/fullscreenScroller.css
@@ -16,20 +16,12 @@
 .scrollNavItemActive{
     background-color: white;
 }
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background: #333;
-    color: #fff;
-    height: 100vh;
-    line-height: 1.6;
+.firstScrollingContainer{
+    margin-top: 56px;
+}
+.allScrollingContainer{
+    background-color: #e9e9e9;
+    text-align: center;
+    z-index: -1;
     overflow: hidden;
-  }
-  
-  .containerx {
-    width: 100%;
-    height: 100%;
-    /* CSS Smooth Scroll */
-    overflow-y: scroll; 
-    scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
-  }
+}
