--- a/src/app/components/displayArticle/displaySet/displaySet.css
+++ b/src/app/components/displayArticle/displaySet/displaySet.css
@@ -1,14 +1,54 @@
-.setFrame {
-    padding: 2%;
-    height: 100% !important;
-    width: 100% !important;
+.imageSize {
+    width: calc(25vw);
+    height: calc(100vw/6);
 }
-.center-container{
-    position: relative;
+.cardStyle {
+    width: calc(100vw/4);
+    margin: calc(1vw/2);
 }
-
-.set-container {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%,-50%);
+.halfHeight {
+    height: 50%;
+}
+.card-parent{
+    width: calc((26vw*3));
+}
+.titleSize {
+    font-size: medium;
+}
+.borderScaler {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.titleSize {
+    height: 50px;
+    line-height: 50px;
+    width: 100%;
+    text-align: center; 
+    vertical-align:middle;
+}
+.imageSize {
+    border-radius: 3px 3px 0px 0px;
+}
+.cardStyle {
+    background-color: white;
+    border-radius: 3px;
+}
+.card-parent{
+    display: flex;
+    flex-wrap: wrap;
+}
+.card-row {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    align-items: center;
+}
+.mobile{
+    flex-direction: column;
+}
+.card-container {
+    flex-grow: 1;
 }
