--- a/src/app/components/fullscreenScroller/fullscreenScroller.css
+++ b/src/app/components/fullscreenScroller/fullscreenScroller.css
@@ -1,4 +1,11 @@
+/* General */
+
+
+/* Scrollingbar */
 .scrollNav {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
     position: fixed;
     width: 10px;
     z-index: 2;
@@ -6,15 +13,26 @@
     padding: 0 2.5px;
     border-radius: 5px;
     background-color:rgb(99, 100, 100);
+    top: calc(20vh + 28px);
+    height: 60vh;
 }
+
 .scrollNavItem{
     background-color: #c2c2c2;
     display: block;
     border-radius: 5px;
     width: 5px;
+    height: 100%;
+    border: 5px solid rgb(99, 100, 100);
+}
+.scrollNavItem:hover{
+    cursor: pointer;
 }
 .scrollNavItemActive{
     background-color: white;
+}
+.scrollNavItemActive:hover{
+    cursor: context-menu;
 }
 .firstScrollingContainer{
     margin-top: 56px;
@@ -24,4 +42,7 @@
     text-align: center;
     z-index: -1;
     overflow: hidden;
+    width: 100vw;
+    height: calc(100vh - 56px);     
+
 }
