--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,9 +1,8 @@
-/* Nav */
 .main-nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 56px;
+    height: 20px;
     padding: 18px;
     font-size: 13px;
     position: fixed;
@@ -16,16 +15,19 @@
 .main-nav ul {
     display: flex;
     list-style: none;
+    text-decoration: none ;
 }
   
 .main-nav ul li a {
     font-weight: bold;
     color: white;
     padding-top: 16px;
+    padding: 0 10px;
+    text-decoration: none ;
 }
-  
+    
 .main-nav ul li a:hover {
-    color: blue;
+    color: lightblue;
 }
 
 .main-nav ul.main-menu {
