--- a/src/app/components/displayArticle/displayWidePicture/displayWidePicture.css
+++ b/src/app/components/displayArticle/displayWidePicture/displayWidePicture.css
@@ -1,11 +1,24 @@
+.wideContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-grow: 1;
+    justify-content: center;
+}
+.flexitem {
+    align-self: center;
+}
+.wideImage {
+    /* 3600 / 2154 = 0.67 image */
+    width: 100vw;
+    height: 67vw;
+    /* Die Differenz von Bildschirmhöhe und Bildhöhe um die hälfte nach oben ziehen (centering) */
+    margin-top: calc(calc(calc(100vh - 58px) - 67vw) / 2);
+}
 .titleBox {
     position: absolute;
     top: 20%;
     left: 0;
     width: 100%;
     text-align: center;
-}
-.imageWide{
-    width: 100vw;
-    height: calc(100vh - 56px);
 }
