--- a/src/app/components/fullscreenScroller/fullscreenScroller.css
+++ b/src/app/components/fullscreenScroller/fullscreenScroller.css
@@ -1,38 +1,54 @@
 /* General */
 
 
-/* Scrollingbar */
+/* Scrolling */
+.angleLink{
+    display: inline;
+}
+.angleIcon{
+    border: solid #c2c2c2;
+    border-width: 0 0.5vw 0.5vw 0;
+    display: inline-block !important;
+    padding: 9px;
+}
+.angleHover:hover{
+    border-color: white;
+    cursor: pointer;
+}
+.angleupIcon {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+.angledownIcon {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
 .scrollNav {
     display: flex;
     flex-flow: column;
     align-items: center;
+    justify-content: space-between;
     position: fixed;
-    width: 10px;
     z-index: 2;
-    margin-left: 20px;
-    padding: 0 2.5px;
-    border-radius: 5px;
-    background-color:rgb(99, 100, 100);
-    top: calc(20vh + 28px);
-    height: 60vh;
+    margin-left: 1.5vw;
+    width: 2vw;
+    top: 37.5vh;
+    height: 25vh;
 }
 
 .scrollNavItem{
     background-color: #c2c2c2;
     display: block;
     border-radius: 5px;
-    width: 5px;
-    height: 100%;
-    border: 5px solid rgb(99, 100, 100);
+    width: 0.3vw;
+    height: 3.5vh;
 }
 .scrollNavItem:hover{
     cursor: pointer;
 }
 .scrollNavItemActive{
     background-color: white;
-}
-.scrollNavItemActive:hover{
-    cursor: context-menu;
+    cursor: context-menu !important;
 }
 .firstScrollingContainer{
     margin-top: 56px;
