--- a/src/app/components/displayArticle/displayWidePicture/displayWidePicture.css
+++ b/src/app/components/displayArticle/displayWidePicture/displayWidePicture.css
@@ -9,11 +9,11 @@
     align-self: center;
 }
 .wideImage {
-    /* 3600 / 2154 = 0.67 image */
+    /* 3600 / 2154 = 0.67 image ratio*/
     width: 100vw;
     height: 67vw;
     /* Die Differenz von Bildschirmhöhe und Bildhöhe um die hälfte nach oben ziehen (centering) */
-    margin-top: calc(calc(calc(100vh - 58px) - 67vw) / 2);
+    margin-top: calc(calc(calc(100vh - 56px) - 67vw) / 2);
 }
 .titleBox {
     position: absolute;
@@ -21,4 +21,15 @@
     left: 0;
     width: 100%;
     text-align: center;
+}
+
+
+@media only screen and (max-width: 760px) {
+    /* center by flexbox */
+    .wideImage {
+        margin-top: 0px !important;
+        /* 100vh / 0,67 * 100 = Bildschirmhöhe geteilt durch die Bildratio mal 100 */
+        width: 149vh !important;
+        height: 100vh !important;
+    }
 }
