--- a/src/app/main.css
+++ b/src/app/main.css
@@ -57,7 +57,7 @@
 }
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #fff;
+    background: #f4f4f4;
     color: #000;
     font-size: 15px;
     line-height: 1.5;
