--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,113 +1,6 @@
-.mobileSidebar {
-    width: 70vw !important;
-    background-color: darkslategray !important;
-    cursor: pointer;
+.active{
+    color: var(--text-light-active-color) !important;
 }
-.mobileSidebar p{
-    font-size: 5vw;
-}
-.mobileSidebarHeaderItem {
-    background-color: rgb(32, 32, 148) !important;
-    font-weight: bold;
-}
-.mobileSidebarItem {
-    padding-left: 45px !important;
-    padding-right: 5px !important;
-}
-.mobileSidebarItem p{
-   width: 100% !important;
-   text-align: left !important;
-   display: block !important;
-
-}
-.angleIconSidebar{
-    border: solid white;
-    border-width: 2px 2px 0 0;
-    display: inline-block !important;
-    padding: 5px;
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-}
-.item:hover {
-    color: red !important;
-    cursor: pointer !important;
-}
-
-.mobileSidebarToggle {
-    position: fixed;
-    top: 5px;
-    left: 5px;
-    display: block;
-}
-#mobileSidebarClose {
-    width: 20px;
-    height: 20px;
-}
-  
-.mdiv {
-    height: 20px;
-    width: 2px;
-    margin-left: 12px;
-    background-color: white;
-    transform: rotate(45deg);
-    Z-index: 1;
-}
-  
-.md {
-    height: 20px;
-    width: 2px;
-    background-color: white;
-    transform: rotate(90deg);
-    Z-index: 2;
-}
-.mobileSidebarOpen {
-    color: black !important
-}
-
-.mobileSidebarClose {
-    color: white !important;
-    z-index: 2;
-    top: 15px !important;
-    left: 58vw !important;
-}
-.mobileSidebarAngle {
-    left: 10px !important;
-    top: 19px !important;
-}
-
-.main-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 56px !important;
-    padding: 18px;
-    font-size: 13px;
-    position: fixed;
-    top: 0;
-    background-color: darkslategray;
-    width: 100%;
-    z-index: 1;
-}
-  
-.main-nav ul {
-    display: flex;
-    list-style: none;
-    text-decoration: none ;
-}
-  
-.main-nav ul li a {
-    font-weight: bold;
-    color: white;
-    padding-top: 16px;
-    padding: 0 10px;
-    text-decoration: none ;
-}
-    
-.main-nav ul li a:hover {
-    color: lightblue;
-}
-
-.main-nav ul.main-menu {
-    flex: 1;
-    margin-left: 20px;
+.logo {
+    margin-right: 0.5rem;
 }
